@@ -507,7 +507,7 @@ CONFIG_STMPE811_THRESHX=39
 CONFIG_STMPE811_THRESHY=51
 
 #
-# USB Device Configuration
+# STM32 USB OTG FS Device Configuration
 #
 CONFIG_USBDEV=n
 CONFIG_USBDEV_ISOCHRONOUS=n
@@ -517,6 +517,18 @@ CONFIG_USBDEV_REMOTEWAKEUP=n
 CONFIG_USBDEV_MAXPOWER=100
 CONFIG_USBDEV_TRACE=n
 CONFIG_USBDEV_TRACE_NRECORDS=128
+
+#
+# STM32 USB OTG FS Host Configuration
+#
+CONFIG_USBHOST=n
+#CONFIG_STM32_OTGFS_RXFIFO_SIZE
+#CONFIG_STM32_OTGFS_NPTXFIFO_SIZE
+#CONFIG_STM32_OTGFS_PTXFIFO_SIZE
+#CONFIG_STM32_OTGFS_DESCSIZE
+CONFIG_STM32_OTGFS_SOFINTR=n
+CONFIG_STM32_USBHOST_REGDEBUG=n
+CONFIG_STM32_USBHOST_PKTDUMP=n
 
 #
 # USB Serial Device Configuration
